.gitignore: - Added coverage
package:
- Added dep:chai
- Added dep:jest
- Added scripts:test

README:
- Added installation instructions
- Reordered functions that have been mocked
- Added supported arguments for the mocked functions

--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll --coverage"
   },
   "keywords": [],
   "author": "Ashwin Abraham (tamatashwin@gmail.com)",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "chai": "^4.3.7",
+    "jest": "^29.5.0"
+  }
 }
